# layout

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: soa.rs
layout-internal/: Cargo.toml
layout-internal/src/: generic.rs  index.rs  input.rs  iter.rs  lib.rs  names.rs  ptr.rs  refs.rs  slice.rs  vec.rs
soa-derive-internal/src/: iter.rs  vec.rs
src/: lib.rs
tests/: extreme.rs  generic.rs  index.rs  nested_soa.rs  ptr.rs  replace.rs  serde.rs  slice_mut.rs  soa_attr.rs  vec.rs  zip.rs
tests/particles/: mod.rs
