[package]
name = "layout"
version = "0.0.1"
edition = "2021"
rust-version = "1.65"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Optimized memory layout using struct of array, Data-oriented design in Rust, DOD SOA"
repository = "https://github.com/fereidani/layout"
homepage = "https://github.com/fereidani/layout"
documentation = "https://docs.rs/layout/"
categories = ["data-structures", "no-std"]
keywords = ["soa", "dod", "data-oriented", "struct-of-array", "performance"]

[features]
default = ["std"]
std = []

[workspace]
members = ["layout-internal"]

[dependencies]
layout_internal = { path = "layout-internal", version = "0.0.1" }
permutation = "0.4.1"

[dev-dependencies]
bencher = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.14.0"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "soa"
harness = false


[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
rpath = true
debug = false
incremental = false
