[package]
name = "layout_internal"
version = "0.0.1"
edition = "2021"
rust-version = "1.65"
license = "MIT/Apache-2.0"
readme = "../README.md"
description = "Internal implementation crate for layout"
repository = "https://github.com/fereidani/layout"
homepage = "https://github.com/fereidani/layout"
documentation = "https://docs.rs/layout/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
